--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -11,7 +11,11 @@ body{
     background-color: black;
     opacity: 0.9;
     text-align: center;
-    color:grey;
+    color:darkgrey;
+}
+
+main{
+    padding-top:69px;
 }
 
 header{
@@ -21,6 +25,10 @@ header{
     border-bottom: 1px solid seashell;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    background-color: black;
 }
 
 #mission{
@@ -29,9 +37,21 @@ header{
 }
 
 #featured-tea{
-    padding-top: 4em;
+    margin-top: 3em;
     display: flex;
     justify-content: center;
+}
+
+#locations{
+    margin-top: 3em;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+}
+
+#contact{
+    margin-top: 1em;
+    height: 200px;
 }
 
 header img{
@@ -45,7 +65,8 @@ nav{
 
 nav a{
     text-decoration: underline;
-    color:grey;
+    color:darkgrey;
+    padding: 0 0.35em;
 }
 
 .main-img{
@@ -63,11 +84,62 @@ nav a{
     background-color: black;
 }
 
+.tea-images{
+    display: flex;
+    width: 1000px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .tea-images div{
     width: 300px;
     height: 200px;
+    margin: 1.5em 0.5em;
 }
 
 .tea-images img{
     width: 100%;
 }
+
+.cozy-tea{
+    height: 500px;
+    background-image: url("../images/img-locations-background.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 3em;
+}
+
+.tea-locations{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.tea-locations div{
+    width: 300px;
+    margin:0 20px;
+    background-color: black;
+}
+
+.tea-locations div p,h3{
+    margin:2em 0px;
+}
+
+#contact h2,h5{
+    margin-bottom: 1em;
+}
+
+footer p {
+    margin-left: 20px;
+}
+
+footer{
+    display: flex;
+    justify-content: flex-start;
+}
+
